ingress/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: nginx-ingress
  labels:
    app: nginx-ingress
